[tool.poetry]
name = "algorithm_problems"
version = "0.1.0"
description = ""
authors = ["Anthony Chiu <kingychiu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
coverage = "^6.3.3"
pylint = "^2.13.9"
black = "^22.3.0"
mypy = "^0.950"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
