[tool.poetry]
name = "algorithm_problems"
version = "0.1.0"
description = ""
authors = ["Anthony Chiu <kingychiu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.3.0"
mypy = "^1.4.1"
ruff = "^0.0.285"
isort = "^5.12.0"
pytest-xdist = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["__init__.py"]
select = ["E", "F", "PL", "I", "ICN", "RET", "SIM", "NPY", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004", "PLR5501"]